syntax = "proto3";

package content;

option go_package = "your_project/internal/proto/contentpb";

service ContentService {
  rpc ModerateContent(ModerateContentRequest) returns (ModerateContentResponse);
  rpc GetContents(GetContentsRequest) returns (GetContentsResponse);
  rpc AddContent(AddContentRequest) returns (AddContentResponse);
  rpc SendContentToModeration(SendContentToModerationRequest) returns (SendContentToModerationResponse);
}

message AddContentRequest {
  int64 user_id = 1;
  string building = 2;
  int32 floor = 3;
  string notes = 4;
  string file_name = 5;
  string file_path = 6;
  string start_time = 7;
  string end_time = 8;
}

message AddContentResponse {
  int32 content_id = 1;
}

message ModerateContentRequest {
  int64 user_id = 1;
  int32 content_id = 2;
  int32 status_id = 3; // 3 - одобрено, 4 - отклонено
  string reason = 4; // Опционально, используется при отклонении
}

message ModerateContentResponse {
  bool success = 1;
}

message GetContentsRequest {
  int64 user_id = 1;
  int32 status_id = 2; // 0 - не модерировано, 3 - одобрено, 4 - отклонено
  string start_time = 3;
  string end_time = 4;
}

message GetContentsResponse {
  repeated ContentForDB contents = 1;
}

message SendContentToModerationRequest {
  int64 user_id = 1;
  int32 content_id = 2;
  int32 status_id = 3;
}

enum ModerationStatus {
  SUCCESS = 0;           // Успешно отправлено на модерацию
  ALREADY_SENT = 1;      // Уже отправлено на модерацию
  INVALID_CONTENT = 2;   // Недействительное содержимое
  PERMISSION_DENIED = 3; // Нет прав для отправки
  INTERNAL_ERROR = 4;    // Внутренняя ошибка сервера
}

message SendContentToModerationResponse {
  ModerationStatus status = 1;
  string message = 2;
}

message ContentForDB {
  int32 id = 1;
  int64 user_id = 2;
  string mac_address = 3;
  string file_name = 4;
  string file_path = 5;
  string start_time = 6;
  string end_time = 7;
  ContentHistory latest_history = 8;
}

message ContentHistory {
  int32 id = 1;
  int32 content_id = 2;
  int32 status_id = 3;
  string created_at = 4;
  int64 user_id = 5;
}

